fix(ALL): Implement employee management application
- Added MVC structure with Spring Boot
- Integrated REST API consumption for employee data
- Implemented annual salary calculation in business layer
- Created view with search functionality and employee table
- Included unit tests for business logic